# cwg

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/players/: CMakeLists.txt
src/players/tank_kamikaze_player/src/: CMakeLists.txt
src/players/tank_kamikaze_player/src/tank_kamikaze_player/: .gitignore  CMakeLists.txt
src/players/tank_player_dumb/src/: CMakeLists.txt
src/players/tank_player_grandmother/src/: CMakeLists.txt
src/players/tank_player_manual/src/: .gitignore  CMakeLists.txt
src/players/tank_player_powerup/src/: .gitignore  CMakeLists.txt
src/players/tank_random_player/src/: CMakeLists.txt
src/players/tank_random_player/src/tank_random_player/: CMakeLists.txt
src/players/tank_sample/src/: .gitignore  CMakeLists.txt
src/players/tank_team_player/src/: CMakeLists.txt
src/players/tank_team_player/src/tank_team_player/: .gitignore  CMakeLists.txt  GameMap.cpp
src/tank_engine/src/: CMakeLists.txt
src/tank_game_gui/src/: CMakeLists.txt  PassiveGroup.cpp  PassiveGroup.h  application.qrc  gameworld.cpp
src/tank_match_server/src/: CMakeLists.txt
tank_dou/: .gitignore  CMakeLists.txt  Consoden.TankGame.Boards.dou
