add_subdirectory(tank_player_dumb/src/)
add_subdirectory(tank_random_player/src)
add_subdirectory(tank_player_grandmother/src)
add_subdirectory(tank_kamikaze_player/src)
add_subdirectory(tank_sample/src)
add_subdirectory(tank_player_powerup/src)
add_subdirectory(tank_team_player/src)
add_subdirectory(tank_player_manual/src)
